--- a/www/app/template/menuPrincipal.html
+++ b/www/app/template/menuPrincipal.html
@@ -4,7 +4,7 @@
     <div class="row alert alert-success alert-dismissible" ng-show="alerta">
         <button type="button" class="close" data-dismiss="alert" aria-label="Close">
             <span aria-hidden="true">&times;</span></button>
-       {{mensajeAlerta}}
+        {{mensajeAlerta}}
     </div>
 
     <div class='' style='height: 90vh;'>
@@ -24,10 +24,34 @@
                 <td>{{x.celular}}</td>
                 <td>{{x.correo}}</td>
                 <td style='text-align: center'>
-                    <i class='glyphicon glyphicon-pencil' ng-click="editar(x)"></i>
-                    <i class='glyphicon glyphicon-trash'></i>
+                    <i class='glyphicon glyphicon-pencil' ng-click="editar(x)" title="Editar"></i>
+                    <i class='glyphicon glyphicon-trash' title="Eliminar" data-toggle="modal" data-target="#modalEliminar" ng-click="eliminar(x)"></i>
                 </td>
             </tr>
         </table>
     </div>
 </div>
+
+
+
+
+
+<!--data-keyboard="false" data-backdrop="static"-->
+<div class="modal fade" tabindex="-1" role="dialog"  id="modalEliminar"  >
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title">Eliminar Registro</h4>
+            </div>
+            <div class="modal-body">
+
+                <p>Estas seguro que desea borrar el contacto {{mod.nombre + " " + mod.apellido}}</p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Cancelar</button>
+                <button type="button" class="btn btn-warning" ng-click="confirmarEliminar()">Eliminar</button>
+            </div>
+        </div><!-- /.modal-content -->
+    </div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
