--- a/www/app/template/editarContacto.html
+++ b/www/app/template/editarContacto.html
@@ -1,7 +1,29 @@
 
 <div class='container-fluid'>
-  
-    <div class="col-lg-12" ng-include=" 'app/template/partial/encabezado.html' "></div>
+
+    <!--<div class="col-lg-12" ng-include=" 'app/template/partial/encabezado.html' "></div>-->
+     <nav class="navbar navbar-default row">
+        <div class="container-fluid">
+            <div class="navbar-header col-lg-6" style='font-size: 45px'>
+                <label>Agenda Telefonica</label>
+            </div>
+            <div class="col-lg-6">
+                <div class="col-lg-offset-2 col-lg-10">
+                  <form class="navbar-form navbar-left" ng-submit="buscar()" role="search">
+                        <div class="form-group">
+                            <input ng-model="bus.texto" type="text" class="form-control" placeholder="Search" style="width: 450px; margin-top: 10px;" required>
+
+                            <button type="submit" class="btn btn-default glyphicon glyphicon-search"></button>
+                            <!--<a ng-click="buscar()" class='btn btn-default glyphicon glyphicon-search'></a>-->
+                            <!--<button class="btn btn-default glyphicon glyphicon-search"  ng-model="buscar()"></button>-->
+                            <a href='#!/registroContacto' class='btn btn-default'>Agregar</a>
+                            <a href='#!/logout' class='btn btn-default'>Logout</a>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </nav>
 
     <div class="panel panel-body" style="height: 80vh;">
         <div class='row' style='font-size: 35px; margin-left: 5px;margin-right: 5px;  border-bottom: 1px solid #848484'>
